// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddNOWApplicationNationEventModal renders properly 1`] = `
<div>
  <div>
    <form
      class="ant-form ant-form-vertical common-form common-form-ADD_NOTICE_OF_WORK_NATION_EVENT_FORM form-edit"
      id="ADD_NOTICE_OF_WORK_NATION_EVENT_FORM"
    >
      <div
        class="ant-row"
        style="margin-left: -24px; margin-right: -24px;"
      >
        <div
          class="ant-col ant-col-sm-24 ant-col-md-24"
          style="padding-left: 24px; padding-right: 24px;"
        >
          <div
            class="ant-form-item ant-form-item-with-help"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="ADD_NOTICE_OF_WORK_NATION_EVENT_FORM_now_application_nation_event_code"
                  title=""
                >
                  <div
                    style="width: 100%;"
                  >
                    Event/Action
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-show-search"
                      data-cy="now_application_nation_event_code"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="now_application_nation_event_code_list_0"
                            aria-autocomplete="list"
                            aria-controls="now_application_nation_event_code_list"
                            aria-haspopup="listbox"
                            aria-owns="now_application_nation_event_code_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="now_application_nation_event_code"
                            role="combobox"
                            type="search"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          Select an event/action
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  style="display: flex; flex-wrap: nowrap;"
                >
                  <div
                    class="ant-form-item-explain ant-form-item-explain-connected"
                    id="ADD_NOTICE_OF_WORK_NATION_EVENT_FORM_now_application_nation_event_code_help"
                    role="alert"
                  >
                    <div
                      class=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item ant-form-item-with-help"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="ADD_NOTICE_OF_WORK_NATION_EVENT_FORM_event_from"
                  title=""
                >
                  <div
                    style="width: 100%;"
                  >
                    From
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-show-search"
                      data-cy="event_from"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="event_from_list_0"
                            aria-autocomplete="list"
                            aria-controls="event_from_list"
                            aria-haspopup="listbox"
                            aria-owns="event_from_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="event_from"
                            role="combobox"
                            type="search"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          Select party who initiated the event
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  style="display: flex; flex-wrap: nowrap;"
                >
                  <div
                    class="ant-form-item-explain ant-form-item-explain-connected"
                    id="ADD_NOTICE_OF_WORK_NATION_EVENT_FORM_event_from_help"
                    role="alert"
                  >
                    <div
                      class=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item ant-form-item-with-help"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="ADD_NOTICE_OF_WORK_NATION_EVENT_FORM_event_to"
                  title=""
                >
                  <div
                    style="width: 100%;"
                  >
                    To
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-show-search"
                      data-cy="event_to"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="event_to_list_0"
                            aria-autocomplete="list"
                            aria-controls="event_to_list"
                            aria-haspopup="listbox"
                            aria-owns="event_to_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="event_to"
                            role="combobox"
                            type="search"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          Select party who is the recipient of the event
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  style="display: flex; flex-wrap: nowrap;"
                >
                  <div
                    class="ant-form-item-explain ant-form-item-explain-connected"
                    id="ADD_NOTICE_OF_WORK_NATION_EVENT_FORM_event_to_help"
                    role="alert"
                  >
                    <div
                      class=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item ant-form-item-with-help"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="ADD_NOTICE_OF_WORK_NATION_EVENT_FORM_start_date"
                  title=""
                >
                  <div
                    style="width: 100%;"
                  >
                    Start Date
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-picker"
                    >
                      <div
                        class="ant-picker-input"
                      >
                        <input
                          aria-required="true"
                          autocomplete="off"
                          id="start_date"
                          name="start_date"
                          placeholder=""
                          readonly=""
                          size="12"
                          title=""
                          value=""
                        />
                        <span
                          class="ant-picker-suffix"
                        >
                          <span
                            aria-label="calendar"
                            class="anticon anticon-calendar"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="calendar"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  style="display: flex; flex-wrap: nowrap;"
                >
                  <div
                    class="ant-form-item-explain ant-form-item-explain-connected"
                    id="ADD_NOTICE_OF_WORK_NATION_EVENT_FORM_start_date_help"
                    role="alert"
                  >
                    <div
                      class=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item ant-form-item-with-help"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class=""
                  for="ADD_NOTICE_OF_WORK_NATION_EVENT_FORM_end_date"
                  title=""
                >
                  <div>
                    End Date
                     
                    <span
                      class="form-item-optional"
                    >
                       (optional)
                    </span>
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-picker"
                    >
                      <div
                        class="ant-picker-input"
                      >
                        <input
                          autocomplete="off"
                          id="end_date"
                          name="end_date"
                          placeholder=""
                          readonly=""
                          size="12"
                          title=""
                          value=""
                        />
                        <span
                          class="ant-picker-suffix"
                        >
                          <span
                            aria-label="calendar"
                            class="anticon anticon-calendar"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="calendar"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  style="display: flex; flex-wrap: nowrap;"
                >
                  <div
                    class="ant-form-item-explain ant-form-item-explain-connected"
                    id="ADD_NOTICE_OF_WORK_NATION_EVENT_FORM_end_date_help"
                    role="alert"
                  >
                    <div
                      class=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="right center-mobile"
      >
        <button
          aria-label="Cancel"
          class="ant-btn ant-btn-default core-btn core-btn-default  form-btn"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          aria-label="Submit"
          class="ant-btn ant-btn-primary  form-btn"
          disabled=""
          type="submit"
        >
          <span>
            Save Changes
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`AddNOWApplicationNationEventModal renders properly with start date disabled 1`] = `
<div>
  <div>
    <form
      class="ant-form ant-form-vertical common-form common-form-ADD_NOTICE_OF_WORK_NATION_EVENT_FORM form-edit"
      id="ADD_NOTICE_OF_WORK_NATION_EVENT_FORM"
    >
      <div
        class="ant-row"
        style="margin-left: -24px; margin-right: -24px;"
      >
        <div
          class="ant-col ant-col-sm-24 ant-col-md-24"
          style="padding-left: 24px; padding-right: 24px;"
        >
          <div
            class="ant-form-item ant-form-item-with-help"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="ADD_NOTICE_OF_WORK_NATION_EVENT_FORM_now_application_nation_event_code"
                  title=""
                >
                  <div
                    style="width: 100%;"
                  >
                    Event/Action
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-show-search"
                      data-cy="now_application_nation_event_code"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="now_application_nation_event_code_list_0"
                            aria-autocomplete="list"
                            aria-controls="now_application_nation_event_code_list"
                            aria-haspopup="listbox"
                            aria-owns="now_application_nation_event_code_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="now_application_nation_event_code"
                            role="combobox"
                            type="search"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          Select an event/action
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  style="display: flex; flex-wrap: nowrap;"
                >
                  <div
                    class="ant-form-item-explain ant-form-item-explain-connected"
                    id="ADD_NOTICE_OF_WORK_NATION_EVENT_FORM_now_application_nation_event_code_help"
                    role="alert"
                  >
                    <div
                      class=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item ant-form-item-with-help"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="ADD_NOTICE_OF_WORK_NATION_EVENT_FORM_event_from"
                  title=""
                >
                  <div
                    style="width: 100%;"
                  >
                    From
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-show-search"
                      data-cy="event_from"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="event_from_list_0"
                            aria-autocomplete="list"
                            aria-controls="event_from_list"
                            aria-haspopup="listbox"
                            aria-owns="event_from_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="event_from"
                            role="combobox"
                            type="search"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          Select party who initiated the event
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  style="display: flex; flex-wrap: nowrap;"
                >
                  <div
                    class="ant-form-item-explain ant-form-item-explain-connected"
                    id="ADD_NOTICE_OF_WORK_NATION_EVENT_FORM_event_from_help"
                    role="alert"
                  >
                    <div
                      class=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item ant-form-item-with-help"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="ADD_NOTICE_OF_WORK_NATION_EVENT_FORM_event_to"
                  title=""
                >
                  <div
                    style="width: 100%;"
                  >
                    To
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-show-search"
                      data-cy="event_to"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="event_to_list_0"
                            aria-autocomplete="list"
                            aria-controls="event_to_list"
                            aria-haspopup="listbox"
                            aria-owns="event_to_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="event_to"
                            role="combobox"
                            type="search"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          Select party who is the recipient of the event
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  style="display: flex; flex-wrap: nowrap;"
                >
                  <div
                    class="ant-form-item-explain ant-form-item-explain-connected"
                    id="ADD_NOTICE_OF_WORK_NATION_EVENT_FORM_event_to_help"
                    role="alert"
                  >
                    <div
                      class=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item ant-form-item-with-help"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="ADD_NOTICE_OF_WORK_NATION_EVENT_FORM_start_date"
                  title=""
                >
                  <div
                    style="width: 100%;"
                  >
                    Start Date
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-picker ant-picker-disabled"
                    >
                      <div
                        class="ant-picker-input"
                      >
                        <input
                          aria-required="true"
                          autocomplete="off"
                          disabled=""
                          id="start_date"
                          name="start_date"
                          placeholder=""
                          readonly=""
                          size="12"
                          title=""
                          value=""
                        />
                        <span
                          class="ant-picker-suffix"
                        >
                          <span
                            aria-label="calendar"
                            class="anticon anticon-calendar"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="calendar"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  style="display: flex; flex-wrap: nowrap;"
                >
                  <div
                    class="ant-form-item-explain ant-form-item-explain-connected"
                    id="ADD_NOTICE_OF_WORK_NATION_EVENT_FORM_start_date_help"
                    role="alert"
                  >
                    <div
                      class=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item ant-form-item-with-help"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class=""
                  for="ADD_NOTICE_OF_WORK_NATION_EVENT_FORM_end_date"
                  title=""
                >
                  <div>
                    End Date
                     
                    <span
                      class="form-item-optional"
                    >
                       (optional)
                    </span>
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-picker"
                    >
                      <div
                        class="ant-picker-input"
                      >
                        <input
                          autocomplete="off"
                          id="end_date"
                          name="end_date"
                          placeholder=""
                          readonly=""
                          size="12"
                          title=""
                          value=""
                        />
                        <span
                          class="ant-picker-suffix"
                        >
                          <span
                            aria-label="calendar"
                            class="anticon anticon-calendar"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="calendar"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  style="display: flex; flex-wrap: nowrap;"
                >
                  <div
                    class="ant-form-item-explain ant-form-item-explain-connected"
                    id="ADD_NOTICE_OF_WORK_NATION_EVENT_FORM_end_date_help"
                    role="alert"
                  >
                    <div
                      class=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="right center-mobile"
      >
        <button
          aria-label="Cancel"
          class="ant-btn ant-btn-default core-btn core-btn-default  form-btn"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          aria-label="Submit"
          class="ant-btn ant-btn-primary  form-btn"
          disabled=""
          type="submit"
        >
          <span>
            Save Changes
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;
